# LejuLab-Deploy

./: .gitignore  README.md
installed/share/leju-hardware/: package.xml
installed/share/leju-hardware/cmake/: leju-hardwareConfig.cmake
installed/share/leju-hardware/config/: kuavo4pro_single_canbus_cofig.yaml  kuavo5_dual_canbus_cofig.yaml  kuavo5_v53_dual_canbus_cofig.yaml
installed/share/leju-hardware/config/ecmaster/: yd_6_c500.xml
installed/share/leju-hardware/config/kuavo_v45/: kuavo.json
installed/share/leju-hardware/config/kuavo_v46/: kuavo.json
installed/share/leju-hardware/config/kuavo_v52/: kuavo.json
installed/share/leju-hardware/config/roban_v14/: kuavo.json
installed/share/leju-hardware/config/roban_v17/: kuavo.json
installed/share/leju-hardware/launch/: hardware.launch
installed/share/lejusdk-recorder/: package.xml
installed/share/lejusdk-recorder/cmake/: lejusdk-recorderConfig.cmake
src/leju-controllers/leju-dummy-controller/: CMakeLists.txt  package.xml
src/leju-controllers/leju-dummy-controller/config/46/: config.yaml
src/leju-controllers/leju-dummy-controller/include/leju-dummy-controller/: dummy_controller.h  joint_monkey_controller.h
src/leju-controllers/leju-dummy-controller/src/: dummy_controller.cpp  joint_monkey_controller.cpp  run_dummy_controller.cpp
src/leju-controllers/leju-rl-controller/: CMakeLists.txt  package.xml
src/leju-controllers/leju-rl-controller/config/14/: config_amp.yaml  config_mimic.yaml  config_mimic2.yaml  config_mimic_HPNY_dance.yaml  config_mimic_charleston_dance.yaml  config_mimic_charleston_dance_lss.yaml  config_mimic_prone.yaml  config_sim45.yaml  controller_manager.yaml  robanS14_charleston_dance.txt  robanS14_prone.txt  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/config/17/: config_mimic_dance.yaml  controller_manager.yaml  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/config/46/: config.yaml  config_amp.yaml  controller_manager.yaml  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/config/52/: config_amp.yaml  controller_manager.yaml  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/config/53/: config_amp.yaml  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/config/54/: config_amp.yaml  config_mimic_dance.yaml  config_walk_demo.yaml  controller_manager.yaml  teleop_bindings.yaml
src/leju-controllers/leju-rl-controller/docs/: controller_framework.md  onnxruntime_quickstart.md  rl_demo_controller.md  rl_mimic_controller.md  teleop_bindings.md
src/leju-controllers/leju-rl-controller/examples/: CMakeLists.txt
src/leju-controllers/leju-rl-controller/examples/src/: arm_controller.cpp  cmd_stance_calculator.cpp  rl_demo_controller.cpp  rl_mimic_controller.cpp  run_rl_demo_controller.cpp  run_rl_mimic_controller.cpp
src/leju-controllers/leju-rl-controller/include/leju-rl-controller/: joy_handler.h  rl_demo_controller.h  rl_log.h  rl_mimic_controller.h  robot_data.h  velocity_manager.h
src/leju-controllers/leju-rl-controller/src/: arm_controller.cpp  cmd_stance_calculator.cpp  joy_handler.cpp  main.cpp  rl_demo_controller.cpp  rl_mimic_controller.cpp  robot_data.cpp  run_rl_demo_controller.cpp  run_rl_mimic_controller.cpp  velocity_manager.cpp
src/leju-controllers/leju-rl-controller/tests/: test_robot_data.cpp
src/leju-ik/: CMakeLists.txt  README.md  package.xml
src/leju-ik/config/: quest3_incremental_ik.yaml
src/leju-ik/include/leju-ik/: ArmLengthMeasurement.h  BaseIKSolver.h  HandSmoother.h  OneStageIKEndEffector.h  Quest3ArmInfoTransformer.h  Quest3IkAPI.h  QuestArmRobotMapper.h  QuestVrCalibration.h  ik_types.h
src/leju-ik/src/: ArmAbsoluteIK.cpp  ArmLengthMeasurement.cpp  BaseIKSolver.cpp  HandSmoother.cpp  IncrementalControlModule.cpp  OneStageIKEndEffector.cpp  Quest3ArmInfoTransformer.cpp  Quest3IkAPI.cpp  Quest3IkIncrementalAPI.cpp  QuestArmRobotMapper.cpp  TwoStageTorsoIK.cpp
src/leju-ik/test/: CMakeLists.txt  test_leju_ik.cpp
src/leju-remote/: CMakeLists.txt  README.md  package.xml
src/leju-remote/protos/protos/: hand_pose.proto  hand_wrench_srv.proto
src/leju-remote/protos_c/: generate.sh  hand_pose.pb.cc  hand_pose.pb.h  hand_wrench_srv.pb.cc  hand_wrench_srv.pb.h  robot_info.pb.cc  robot_info.pb.h
src/leju-remote/src/: quest_udp_to_dds_node.cpp
src/leju-vr-control/: CMakeLists.txt  README.md  package.xml
src/leju-vr-control/config/: quest_vr_control.yaml
src/leju-vr-control/examples/vr_mujoco_demo/: run_vr_demo.sh
src/leju-vr-control/include/leju-vr-control/: arm_ctrl_mode_fsm.h  head_solver.h  quest_combo.h  quest_to_ik_converter.h  quest_vr_abs_fsm.h  quest_vr_fsm.h  waist_teleop_controller.h
src/leju-vr-control/src/: arm_ctrl_mode_fsm.cpp  head_solver.cpp  quest_to_ik_converter.cpp  quest_vr_abs_control_node.cpp  quest_vr_abs_fsm.cpp  quest_vr_control_node.cpp  quest_vr_fsm.cpp  waist_teleop_controller.cpp
src/leju-vr-control/test/: mujoco_viewer.py  test_arm_ik_node.cpp
src/leju_assets/: .DONT_EDIT  CMakeLists.txt  package.xml
src/leju_assets/include/leju_assets/: package_path.h
src/leju_assets/models/biped_s46/: CMakeLists.txt  package.xml
src/leju_assets/src/: package_path.cc
src/leju_launch/: CMakeLists.txt  package.xml
src/leju_launch/config/: cleanup.yaml  cyclonedds.xml  cyclonedds_shm.xml  recorder.yaml  roudi_config.toml
src/leju_launch/launch/: load_mujoco_sim.launch  load_real.launch  vr_teleop.launch
src/leju_launch/launch/demo/: load_mujoco_sim_mimic_demo.launch  load_mujoco_sim_rl_demo.launch  load_real_mimic_demo.launch  load_real_rl_demo.launch
src/leju_launch/scripts/: check_shm.sh  cleanup.sh  setup_cyclonedds_config.sh  setup_cyclonedds_config_for_docker.sh  start_node.sh  start_roudi.sh
src/lejusdk/examples/: CMakeLists.txt  package.xml
src/lejusdk/examples/src/: hw_state_subscriber.cpp  imu_data_subscriber.cpp  joint_cmd_publisher.cpp  joint_cmd_subscriber.cpp  joint_state_subscriber.cpp  kuavo_control_example.cpp
src/lejusdk/lejusdk-lowlevel/: CMakeLists.txt  package.xml
src/lejusdk/lejusdk-vr/: CMakeLists.txt  package.xml
(+327 files in other folders)
