<?xml version="1.0"?>
<package format="2">
  <name>leju-ik</name>
  <version>0.1.0</version>
  <description>Decoupled IK library for VR arm control (Quest3 + TwoStageTorsoIK)</description>

  <maintainer email="user@example.com">Leju</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lejusdk-utils</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>lejusdk-utils</exec_depend>

  <export>
  </export>
</package>
