<?xml version="1.0"?>
<package format="2">

  <name>leju_assets</name>
  <version>10.3.0</version>
  <description>This package contains all the URDF files need for kuavo, roban.</description>
  
  <maintainer email="hzc@lejurobot.com">Farbod Farshidian</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

</package>
