<?xml version="1.0"?>
<package format="2">
  <name>lejusdk-recorder</name>
  <version>1.0.0</version>
  <description>CycloneDDS recorder for MCAP files</description>

  <maintainer email="edu@lejurobot.com">Leju Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
